--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,35 +3,11 @@ name: Build
 on:
   push:
     branches:
-      - main  # Specify the branch(es) you want to trigger the workflow on
-  workflow_dispatch:
-    inputs:
-      shouldRunKmp:
-        description: 'Run Kotlin Multiplatform'
-        required: true
-        type: string
-      shouldRunAndroid:
-        description: 'Run Android build'
-        required: true
-        type: string
-      shouldRunDesktop:
-        description: 'Run Desktop build'
-        required: true
-        type: string
+      - main
 
 jobs:
-  CheckInputs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check Inputs
-        run: |
-          echo "shouldRunKmp=${{ github.event.inputs.shouldRunKmp }}"
-          echo "shouldRunAndroid=${{ github.event.inputs.shouldRunAndroid }}"
-          echo "shouldRunDesktop=${{ github.event.inputs.shouldRunDesktop }}"
 
   Android:
-    needs: CheckInputs
-    if: ${{ github.event.inputs.shouldRunKmp == 'true' || github.event.inputs.shouldRunAndroid == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -47,12 +23,9 @@ jobs:
         with:
           name: android-app
           path: |
-            androidApp/build/outputs/apk/**/*.apk
-            # Specify the path(s) where your APK files are generated
+            androidApp/build/outputs/apk/juice_kadai.apk
 
   Desktop:
-    needs: CheckInputs
-    if: ${{ github.event.inputs.shouldRunKmp == 'true' || github.event.inputs.shouldRunDesktop == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -68,5 +41,4 @@ jobs:
         with:
           name: desktop-app
           path: |
-            desktopApp/build/libs/**/*.jar
-            # Adjust the path based on your build setup
+            desktopApp/build/libs/juice_kadai.jar
