--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Job set up
-        uses: ./.github/actions/job-set-up/
+        uses: ./.github/actions
 
       - run: ./gradlew :androidApp:assemble
 
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Job set up
-        uses: ./.github/actions/job-set-up
+        uses: ./.github/actions
 
       - run: ./gradlew :desktopApp:assemble
 
