adding secrets to local properties for github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Build Android and Desktop Apps
         run: |
+           echo 'FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL }}' > ./local.properties
+           echo 'FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}' > ./local.properties
           ./gradlew clean
           ./gradlew :androidApp:assemble
           ./gradlew :desktopApp:assemble
