Pick proper file name for build file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: android-app
-          path: composeApp/build/outputs/apk/juice_kadai.apk
+          path: composeApp/build/outputs/apk/release/*.apk
