--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,19 @@ jobs:
       - name: Build Android App
         run: |
           ./gradlew clean
-          ./gradlew :composeApp:assemble
+          ./gradlew :composeApp:assembleRelease
+
+      - name: Sign APK
+        env:
+          KEYSTORE: ${{ secrets.KEYSTORE }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+
+        run: |
+          echo "$KEYSTORE" | base64 -d > keystore.jks
+          ./gradlew signingReport
+          ./gradlew bundleRelease
 
       - name: Upload APK to GitHub Packages
         uses: actions/upload-artifact@v2
