--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Update local.properties
         run: |
           echo "BASE_URL=${{ secrets.BASE_URL }}" > local.properties
-          echo "PRINT_HTTP_LOGS=${{ secrets.PRINT_HTTP_LOGS }}" > local.properties
+          echo "PRINT_HTTP_LOGS=${{ secrets.PRINT_HTTP_LOGS }}" >> local.properties
+
+      - name: Display contents of local.properties
+        run: cat local.properties
 
       - name: Build Android App
         run: |
