--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Create and Update google-services.json for Debug Build
         run: |
-          echo "GOOGLE_SERVICES_JSON=${{ secrets.GOOGLE_SERVICES_JSON }}" > composeApp/src/debug/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > composeApp/src/debug/google-services.json
           cat composeApp/src/debug/google-services.json
 
       - name: Build Android App
