--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,42 +31,8 @@ jobs:
 
       - name: Create and Update google-services.json for Debug Build
         run: |
-          echo '{
-                      "project_info": {
-                        "project_id": "your-project-id",
-                        "project_number": "861756122959",
-                        "firebase_url": "https://juice-kadai-default-rtdb.asia-southeast1.firebasedatabase.app"
-                      },
-                      "client": [
-                        {
-                          "client_info": {
-                            "mobilesdk_app_id": "1:861756122959:android:38b97cd23f0defa372473a",
-                            "android_client_info": {
-                              "package_name": "com.dineshworkspace.juicekadai"
-                            }
-                          },
-                          "oauth_client": [
-                            {
-                              "client_id": "861756122959-abc.apps.googleusercontent.com",
-                              "client_type": 1
-                            }
-                          ],
-                          "api_key": [
-                            {
-                              "current_key": "your-api-key"
-                            }
-                          ],
-                          "services": {
-                            "appinvite_service": {
-                              "other_platform_oauth_client": []
-                            }
-                          }
-                        }
-                      ]
-                    }' > composeApp/src/debug/google-services.json
-#        run: |
-#          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > composeApp/src/debug/google-services.json
-#          cat composeApp/src/debug/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > composeApp/src/debug/google-services.json
+          cat composeApp/src/debug/google-services.json
 
       - name: Build Android App
         run: |
