--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Android App
         run: |
           ./gradlew clean
-          ./gradlew :composeApp:assembleDebug --debug
+          ./gradlew :composeApp:assembleDebug
 
       - name: Upload APK to GitHub Packages
         uses: actions/upload-artifact@v2
