--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ compose-plugin = "1.6.11"
 kotlin = "2.0.0"
 lifecycleViewmodel = "2.8.3"
 navigationCompose = "2.7.0-alpha07"
-kotlinx-coroutines = "1.8.1"
+kotlinx-coroutines = "1.9.0-RC"
 buildKonfig = "0.15.1"
 gitlive = "1.13.0"
 
