--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
           echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" > local.properties
           echo "APP_ID=${{ secrets.APP_ID }}" >> local.properties
           echo "API_KEY=${{ secrets.API_KEY }}" >> local.properties
+          echo "FIREBASE_DB_URL=${{ secrets.FIREBASE_DB_URL }}" >> local.properties
           echo "PRINT_HTTP_LOGS=${{ secrets.PRINT_HTTP_LOGS }}" >> local.properties
 
       - name: Create google-services directory
