--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
           echo "API_KEY=${{ secrets.API_KEY }}" >> local.properties
           echo "FIREBASE_DB_URL=${{ secrets.FIREBASE_DB_URL }}" >> local.properties
           echo "PRINT_HTTP_LOGS=${{ secrets.PRINT_HTTP_LOGS }}" >> local.properties
+          echo "BASE_LOCATION=${{ secrets.BASE_LOCATION }}" >> local.properties
 
       - name: Create google-services directory
         run: mkdir -p composeApp/src/debug
